# DirectXTexSharp

./: .gitignore  Core.sln  DirectXTexSharp.sln  DirectXTexSharp_2019.sln  DirectXTexSharp_2022.sln  LICENSE  README.md  publish.bat
ConsoleApp/: ConsoleApp.csproj  Program.cs
ConsoleApp/Properties/: launchSettings.json
ConsoleTests/: ConsoleTests.csproj  Program.cs  TexconvNative.cs
ConsoleTests/Properties/: launchSettings.json
DirectXTex.Net.Core/: DirectXTex.Net.Core.csproj  Image.cs  TexMetadata.cs
DirectXTexNet/: DirectXTex.Net.csproj  DirectXTex.Net.nuspec  DirectXTexNet.csproj  TexConv.cs
DirectXTexSharp/: AssemblyInfo.cpp  CMakeLists.txt  Conversion.cpp  DDSFLAGS.h  DirectXTexEnums.h  DirectXTexSharp.nuspec  DirectXTexSharp.vcxproj  DirectXTexSharp.vcxproj.filters  DirectXTexSharpLib.h  DirectXTexSharp_2022.vcxproj  Format.cpp  IO.cpp  Image.cpp  Image.h  ManagedObject.h  Metadata.cpp  ScratchImage.cpp  ScratchImage.h  TexMetadata.cpp  TexMetadata.h  Texconv.cpp  create-nuget.bat  main.cpp  publish.bat  test_out.dds  texconv.h  texconv_lib.cpp  texconv_lib.h
Tests/: ConversionTests  ConversionTests.cs  Dlltests.cs  IOTests  IOTests.cs  MetadataTests.cs  MiscTests.cs  Tests.csproj  Tests_2019.csproj  Tests_2022.csproj  UnitTests.cs
Tests/Assets/: chicken_brown_d.dds  chicken_brown_d.tga  chicken_brown_d.tiff  chicken_brown_n.dds  chicken_brown_n.tga  chicken_brown_n.tiff  chicken_brown_opacity_d.dds  chicken_brown_opacity_d.tga  chicken_brown_opacity_d.tiff
Wrapper/: AssemblyInfo.cpp  DXGI_FORMAT.h  DirectXTexSharpLib.cpp  ManagedObject.h  ScratchImage.cpp  TEX_DIMENSION.h  TEX_FILTER_FLAGS.h  TexMetadata.cpp  TexMetadata.h  Wrapper.cpp  Wrapper.h  Wrapper.vcxproj  Wrapper.vcxproj.filters
